--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,5 +1,5 @@
 - name: ping the server
-  hosts: frontend
+  hosts: Frontend
   tasks: #list of task
     - name: ping the server
       ansible.builtin.ping:
